k8s/environments/rabbitmq/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  labels:
    env: production
    tier: backend
    app: rabbitmq
spec:
  rules:
    - host: <RabbitMQ 도메인> # TODO
    #- host: rabbitmq.192.168.100.64.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
